# EGBOS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  pyproject.toml  rust-toolchain.toml
.github/workflows/: build.yml  format.yml  govcheck.yml  sanitizers.yml
docs/: S0_EXIT_GATE.md
engine/: CMakeLists.txt
engine/core/: shm_layout.h
govcheck/: CMakeLists.txt
govcheck/src/: main.cpp
govcheck/src/commands/: cmd_claims.cpp  cmd_claims.h  cmd_status.cpp  cmd_status.h  cmd_validate.cpp  cmd_validate.h
govcheck/src/graph/: composition_engine.cpp  composition_engine.h  cycle_detector.cpp  cycle_detector.h  dag_builder.cpp  dag_builder.h  namespace_checker.cpp  namespace_checker.h
govcheck/src/parser/: claim_schema.cpp  claim_schema.h  yaml_parser.cpp  yaml_parser.h
govcheck/src/reporter/: json_reporter.cpp  json_reporter.h
govcheck/src/validator/: artifact_validator.cpp  artifact_validator.h  claim_validator.cpp  claim_validator.h  ownership_validator.cpp  ownership_validator.h
govcheck/tests/: CMakeLists.txt  test_commands.cpp  test_graph.cpp  test_parser.cpp  test_reporter.cpp  test_validator.cpp
govcheck/tests/fixtures/: bad_artifact_sha.yaml  bad_owner.yaml  cycle_deps_a.yaml  cycle_deps_b.yaml  expired_claim.yaml  invalid_r4.yaml  invalid_schema.yaml  laundered_class.yaml  superseded_dep.yaml  undeclared_ns_dep.yaml  valid_claim.yaml
governance/: namespace-deps.yaml  team.yaml
governance/claims/: CLAIM-000.yaml  CLAIM-GOVCHECK-001.yaml
governance/proof_artifacts/: govcheck_selftest_dev-workstation-001_2026-06-17.json  govcheck_selftest_dev-workstation-001_2026-06-20.json
governance/schemas/: schema_version_registry.yaml
schemas/: common.fbs
scripts/: generate_proof_artifact.sh  validate_toolchain.sh
tests/governance/fixtures/: verify_all_fixtures.sh
